--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <form id="crawlerForm">
             <label for="mainInput">Enter the main link or keyword to crawl:</label>
             <input type="text" id="mainInput" name="mainInput" required>
-            <button type="button" onclick="submitForm()">Crawl</button>
+            <button type="button" id="crawlButton">Crawl</button>
         </form>
         <div id="outputContainer"></div>
     </div>
