--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Web Crawler App</h1>
-        <form id="crawlerForm">
+        <form action="/crawl" method="post" id="crawlerForm">
             <label for="mainInput">Enter the main link or keyword to crawl:</label>
             <input type="text" id="mainInput" name="mainInput" required>
             <button type="button" id="crawlButton">Crawl</button>
