--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+    <!-- Your existing HTML content -->
     <div class="container">
         <h1>Web Crawler App</h1>
         <form action="/crawl" method="post" id="crawlerForm">
             <label for="mainInput">Enter the main link or keyword to crawl:</label>
             <input type="text" id="mainInput" name="mainInput" required>
-            <button type="button" id="crawlButton">Crawl</button>
+            <button type="submit" id="crawlButton">Crawl</button>
         </form>
-        <div id="outputContainer"></div>
+        <div id="outputContainer">
+            {% if message %}
+                <p>{{ message }}</p>
+            {% endif %}
+        </div>
     </div>
 
     <script src="app.js"></script>
