--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Crawler App</title>
+    <title>Freepik Tag Generator</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <!-- Your existing HTML content -->
     <div class="container">
-        <h1>Web Crawler App</h1>
+        <h1>Freepik Tag Generator</h1>
         <form action="/crawl" method="post" id="crawlerForm">
             <label for="mainInput">Enter the main link or keyword to crawl:</label>
             <input type="text" id="mainInput" name="mainInput" required>
